update final hw-05

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         </ul>
       </section>
 
-      <div class="regular-customers">
+      <div class="regular-customers container">
         <h3 class="regular-customers-title">Regular Customers</h3>
 
         <div class="regular-customers-container">
