--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
               </li>
               <li>
                 <div class="description-images">
-                  <h3 class="type-apps">DESKTOP APPS</h3>
+                  <h3 class="type-apps">Mobile APPS</h3>
                 </div>
                 <img src="images/box-2.jpg" alt="web Design" width="370" />
               </li>
               <li>
                 <div class="description-images">
-                  <h3 class="type-apps">DESKTOP APPS</h3>
+                  <h3 class="type-apps">DESIGN SOLUTIONS</h3>
                 </div>
                 <img src="images/box-3.jpg" alt="Apps" width="370" />
               </li>
