--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
       <div class="modal-content">
         <button class="close-button border-button" data-modal-close>
           <svg class="svg-close-button">
-            <use href="/images/icons.svg#icon-close-button-modal"></use>
+            <use href="./images/icons.svg#icon-close-button-modal"></use>
           </svg>
         </button>
       </div>
