--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
               aria-label="Instagram"
             >
               <svg>
-                <use href="../images/icons.svg#icon-instagram"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
             <a
