--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
 
@@ -203,7 +203,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
 
@@ -215,7 +215,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
 
@@ -227,7 +227,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </div>
@@ -250,7 +250,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
 
@@ -262,7 +262,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
 
@@ -274,7 +274,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
 
@@ -286,7 +286,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </div>
@@ -309,7 +309,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
 
@@ -321,7 +321,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
 
@@ -333,7 +333,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
 
@@ -345,7 +345,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </div>
@@ -368,7 +368,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-instagram"></use>
+                  <use href=."/images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
 
@@ -380,7 +380,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
               <a
@@ -391,7 +391,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
 
@@ -403,7 +403,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href="/images/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </div>
