--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                 class="team-icon"
               >
                 <svg>
-                  <use href=."/images/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
 
